--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
                 <div class="icon cancel-btn">
                   <i class="fas fa-times"></i>
                 </div>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a class="active" href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
               </ul>
               <div class="icon menu-btn">
                 <i class="fas fa-bars"></i>
